syntax = "proto3";

package uwu.v1;

option go_package = "github.com/windfall/uwu_service/internal/pb";

// UwuService is the main service definition.
service UwuService {
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Example CRUD operations
  rpc GetExample(GetExampleRequest) returns (ExampleResponse);
  rpc CreateExample(CreateExampleRequest) returns (ExampleResponse);

  // AI operations
  rpc Chat(ChatRequest) returns (ChatResponse);
  rpc StreamChat(stream ChatRequest) returns (stream ChatResponse);
}

// HealthCheckRequest is empty.
message HealthCheckRequest {}

// HealthCheckResponse contains the health status.
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string service = 2;
}

// GetExampleRequest contains the ID of the example to get.
message GetExampleRequest {
  string id = 1;
}

// CreateExampleRequest contains the data for creating a new example.
message CreateExampleRequest {
  string name = 1;
  string description = 2;
}

// ExampleResponse contains the example data.
message ExampleResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// ChatRequest contains the chat message.
message ChatRequest {
  string message = 1;
  string provider = 2; // "openai" or "gemini"
  repeated ChatMessage history = 3;
}

// ChatMessage represents a message in the chat history.
message ChatMessage {
  string role = 1; // "user" or "assistant"
  string content = 2;
}

// ChatResponse contains the AI response.
message ChatResponse {
  string response = 1;
  string provider = 2;
}
